--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 검색엔진, 로봇이 리스트에 들어가도록 허락해주는것 -->
+    <meta name="robots" content="All">
+    <meta name="Yeti" content="index, follow">
+    <meta name="Yeti" content="All">
+    <meta name="googlebot" content="All">
+    <meta name="googlebot" content="index, follow">
+    <meta name="daumoa" content="All">
+    <meta name="daumoa" content="index, follow">
+    <meta name="title" content="웹디자이너 - 이우진 포트폴리오">
+    <meta name="description" content="웹디자이너 이우진입니다. 포트폴리오 방문을 환영">
+    <meta name="keywords" content="웹디자이너, 웹퍼블리셔, 대구 디자이너">
+    <meta name="author" content="이우진">
+    <meta name="content-language" content="kr">
+
+    <!-- open graph -->
+    <meta property="og:type" content="website"> <!-- 사이트 종류 -->
+    <meta property="og:site_name" content="pooh">
+    <meta property="og:title" content="portfolio"> <!-- 오픈 그래프 제목 -->
+    <meta property="og:description" content="2024 woojin's portfolio"> <!-- 오픈 그래프 설명 -->
+    <meta property="og:image" content="images/lp.jpg"> <!-- 오픈 그래프 썸네일 이미지 -->
+    <meta property="og:image:width" content="400">
+    <meta property="og:image:height" content="300">
+
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="js/main.js" defer></script>
@@ -21,19 +44,29 @@
     <div class="cbox">
         <h1>welcome <br> to my portfolio</h1>
         <div class="c1"></div>
-        <div class="c2"></div>
+        <div class="c2">
+            <img src="images/circle2.png" alt="">
+        </div>
         <div class="menu">
-            <div class="one">
-                <h1>design</h1>
-                <div class="em"></div>
-            </div>
-            <div class="one">
-                <h1>coding</h1>
-                <div class="em"></div>
-            </div>
-            <div class="one">
-                <h1>figma</h1>
-                <div class="em"></div>
+            <div class="container">
+                <div class="box">
+                    <div class="one">
+                        <h1>design</h1>
+                        <div class="em"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="one">
+                        <h1>coding</h1>
+                        <div class="em"></div>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="one">
+                        <h1>figma</h1>
+                        <div class="em"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="sun">
@@ -44,33 +77,38 @@
     </div>
 
     <div class="fade">
-        <div class="main1" data-aos="fade-right" data-aos-delay="300">
-            <div class="container">
-                <div class="tool">
-                    <h1>Tool</h1>
-                    <div class="is">
-                        <img src="images/logo1.png" alt="">
-                        <img src="images/logo3.png" alt="">
-                        <img src="images/logo2.png" alt="">
-                        <img src="images/logo4.png" alt="">
+        <div class="main1" data-aos="fade-up">
+            <h1>Profile</h1>
+            <div class="i"></div>
+            <div class="text">
+                <div class="name">
+                    <h2>이 우 진</h2>
+                    <h3>Lee woojin</h3>
+                </div>
+                <div class="con">
+                    <div class="b">
+                        <h4>BIRTH<br>
+                            EMAIL<br>
+                            NUMBER
+                        </h4>
+                    </div>
+                    <div class="s">
+                        <h4>2005. 06. 09 <br>
+                            dldnwls050609@naver.com <br>
+                            010 - 5280 - 5622
+                        </h4>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="main2" data-aos="fade-left">
-            <h1>Profile</h1>
-            <div class="profile">
-                <div class="text">
-                    <div class="i"></div>
-                    <div class="name">
-                        <h2>이 우 진</h2>
-                        <h3>Lee woojin</h3>
-                    </div>
-                    <div class="con">
-                        <h4>BIRTH <br> 2005. 06. 09</h4>
-                        <h4>EMAIL <br> dldnwls050609@naver.com</h4>
-                        <h4>NUMBER <br> 010 - 5280 - 5622</h4>
-                    </div>
+        <div class="main2" data-aos="fade-up" data-aos-delay="300">
+            <div class="tool">
+                <h1>Tool</h1>
+                <div class="is">
+                    <img src="images/logo1.png" alt="">
+                    <img src="images/logo3.png" alt="">
+                    <img src="images/logo2.png" alt="">
+                    <img src="images/logo4.png" alt="">
                 </div>
             </div>
         </div>
@@ -89,23 +127,44 @@
         <h1>design</h1>
         <div class="container">
             <div class="box b1">
-                <a href="계절음식 sns 버전.pdf" target="_blank"></a>
-                <!-- <object data="계절음식 sns 버전.pdf" type=""></object> -->
+                <a href="pdf/d1.pdf" target="_blank">
+                    <div class="black">
+                        <h1>BANNER</h1>
+                    </div>
+                </a>
             </div>
             <div class="box b2">
-                <a href="호미곶 로고 디자인 설명 - 복사본.pdf" target="_blank"></a>
+                <a href="pdf/d2.pdf" target="_blank">
+                    <div class="black">
+                        <h1>LOGO</h1>
+                    </div>
+                </a>
             </div>
             <div class="box b3">
-                <a href="리스탤린 상세페이지.pdf" target="_blank"></a>
+                <a href="pdf/d3.pdf" target="_blank">
+                    <div class="black">
+                        <h1>Detailed Page</h1>
+                    </div>
+                </a>
             </div>
             <div class="box b4">
-                <a href="sns 배너.psd 듄.pdf" target="_blank"></a>
+                <a href="pdf/d4.pdf" target="_blank">
+                    <div class="black">
+                        <h1>BANNER</h1>
+                    </div>
+                </a>
             </div>
             <div class="box b5">
-                <a href="신발 상세페이지.pdf" target="_blank"></a></object>
+                <a href="pdf/d5.pdf" target="_blank">
+                    <div class="black">
+                        <h1>Detailed Page</h1>
+                    </div>
+                </a>
             </div>
             <div class="box b6">
-                <h1>...</h1>
+                <div class="black">
+                    <h1>UP DATE</h1>
+                </div>
             </div>
         </div>
         <h3>more</h3>
@@ -113,15 +172,35 @@
     <div class="main4">
         <h1>coding</h1>
         <div class="container">
-            <div class="box"><a href="https://dldnwls050609.github.io/hansae/" target="_blank"></a></div>
-            <div class="box"><a href="https://dldnwls050609.github.io/world/" target="_blank"></a></div>
-            <div class="box"><a href="https://dldnwls050609.github.io/clonecoding/" target="_blank"></a></div>
-            <div class="box"><a href="https://dldnwls050609.github.io/yg/" target="_blank"></a></div>
+            <div class="box"><a href="https://dldnwls050609.github.io/hansae/" target="_blank">
+                    <div class="black">
+                        <h1>REDESIGN</h1>
+                    </div>
+                </a></div>
+            <div class="box"><a href="https://dldnwls050609.github.io/world/" target="_blank">
+                    <div class="black">
+                        <h1>REDESIGN</h1>
+                    </div>
+                </a></div>
+            <div class="box"><a href="https://dldnwls050609.github.io/clonecoding/" target="_blank">
+                    <div class="black">
+                        <h1>REDESIGN</h1>
+                    </div>
+                </a></div>
+            <div class="box"><a href="https://dldnwls050609.github.io/yg/" target="_blank">
+                    <div class="black">
+                        <h1>CLONE CODING</h1>
+                    </div>
+                </a></div>
             <div class="box">
-                <h1>...</h1>
+                <div class="black">
+                    <h1>UP DATE</h1>
+                </div>
             </div>
             <div class="box">
-                <h1>...</h1>
+                <div class="black">
+                    <h1>UP DATE</h1>
+                </div>
             </div>
         </div>
         <h3>more</h3>
@@ -131,22 +210,42 @@
         <div class="container">
             <div class="box"><a
                     href="https://www.figma.com/design/OUhEvy4pFoJzkTYTnXi9Gv/%EB%B2%A0%EB%9D%BC-(%EC%9D%B4%EC%9A%B0%EC%A7%84)?node-id=0-1&m=dev&t=zSYXVomqxbmcH5A0-1"
-                    target="_blank"></a></div>
+                    target="_blank">
+                    <div class="black">
+                        <h1>BESKINRABINS</h1>
+                    </div>
+                </a></div>
             <div class="box"><a
                     href="https://www.figma.com/design/KiSOPV4HywkmzCj4qGWmxv/%EC%98%A4%EC%99%A0%EC%A7%80W?node-id=147-924&m=dev&t=lKT0A4J83hVnyIYH-1"
-                    target="_blank"></a></div>
+                    target="_blank">
+                    <div class="black">
+                        <h1>APP design <br> (cooperation)</h1>
+                    </div>
+                </a></div>
             <div class="box">
-                <a href="지역 웹디자인 연습(부산).pdf" target="_blank"></a>
+                <a href="pdf/f1.pdf" target="_blank">
+                    <div class="black">
+                        <h1>WEBDESIGN</h1>
+                    </div>
+                </a>
             </div>
             <div class="box"><a href="
                 https://www.figma.com/design/0DGDcEastLl7ZcR2zC7IRw/Untitled?node-id=0-1&m=dev&t=8lmkcNa8rq5JYy0B-1"
-                    target="_blank"></a>
+                    target="_blank">
+                    <div class="black">
+                        <h1>APP DESIGN</h1>
+                    </div>
+                </a>
             </div>
             <div class="box">
-                <h1>...</h1>
+                <div class="black">
+                    <h1>UP DATE</h1>
+                </div>
             </div>
             <div class="box">
-                <h1>...</h1>
+                <div class="black">
+                    <h1>UP DATE</h1>
+                </div>
             </div>
         </div>
         <h3>more</h3>
