--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>portfolio</title>
     <!-- 검색엔진, 로봇이 리스트에 들어가도록 허락해주는것 -->
     <meta name="robots" content="All">
     <meta name="Yeti" content="index, follow">
@@ -22,7 +22,7 @@
 
     <!-- open graph -->
     <meta property="og:type" content="website"> <!-- 사이트 종류 -->
-    <meta property="og:site_name" content="pooh">
+    <meta property="og:site_name" content="portfolio">
     <meta property="og:title" content="portfolio"> <!-- 오픈 그래프 제목 -->
     <meta property="og:description" content="2024 woojin's portfolio"> <!-- 오픈 그래프 설명 -->
     <meta property="og:image" content="images/lp.jpg"> <!-- 오픈 그래프 썸네일 이미지 -->
@@ -38,6 +38,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/resposive.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
@@ -49,31 +50,31 @@
         </div>
         <div class="menu">
             <div class="container">
-                <div class="box">
+                <div class="box" data-animation-scroll="true" data-target="#design">
                     <div class="one">
                         <h1>design</h1>
-                        <div class="em"></div>
+                        <div class="em">
+                        </div>
                     </div>
+                    <hr>
                 </div>
-                <div class="box">
+                <div class="box" data-animation-scroll="true" data-target="#coding">
                     <div class="one">
                         <h1>coding</h1>
                         <div class="em"></div>
                     </div>
+                    <hr>
                 </div>
-                <div class="box">
+                <div class="box" data-animation-scroll="true" data-target="#figma">
                     <div class="one">
                         <h1>figma</h1>
                         <div class="em"></div>
                     </div>
+                    <hr>
                 </div>
             </div>
         </div>
-        <div class="sun">
-            <hr>
-            <hr>
-            <hr>
-        </div>
+    </div>
     </div>
 
     <div class="fade">
@@ -120,10 +121,10 @@
         </script>
     </div>
     <div class="line">
-        <h1>2024 portfolio</h1>
+        <h1 class="active">I`M A <span></span></h1>
     </div>
 
-    <div class="main3">
+    <div id="design" class="main3">
         <h1>design</h1>
         <div class="container">
             <div class="box b1">
@@ -134,16 +135,16 @@
                 </a>
             </div>
             <div class="box b2">
-                <a href="pdf/d2.pdf" target="_blank">
+                <a href="pdf/d3.pdf" target="_blank">
                     <div class="black">
-                        <h1>LOGO</h1>
+                        <h1>Detailed Page</h1>
                     </div>
                 </a>
             </div>
             <div class="box b3">
-                <a href="pdf/d3.pdf" target="_blank">
+                <a href="pdf/d2.pdf" target="_blank">
                     <div class="black">
-                        <h1>Detailed Page</h1>
+                        <h1>LOGO</h1>
                     </div>
                 </a>
             </div>
@@ -169,7 +170,7 @@
         </div>
         <h3>more</h3>
     </div>
-    <div class="main4">
+    <div class="main4" id="coding">
         <h1>coding</h1>
         <div class="container">
             <div class="box"><a href="https://dldnwls050609.github.io/hansae/" target="_blank">
@@ -205,7 +206,7 @@
         </div>
         <h3>more</h3>
     </div>
-    <div class="main5">
+    <div class="main5" id="figma">
         <h1>figma</h1>
         <div class="container">
             <div class="box"><a
@@ -250,6 +251,7 @@
         </div>
         <h3>more</h3>
     </div>
+    <a href="#" class="gotop"></a>
 </body>
 
 </html>
